--- a/arch/arm/configs/hw_msm7x27a_defconfig
+++ b/arch/arm/configs/hw_msm7x27a_defconfig
@@ -45,10 +45,10 @@ CONFIG_LOCALVERSION="$(KERNEL_LOCAL_VERSION)-perf"
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
-CONFIG_KERNEL_GZIP=y
-# CONFIG_KERNEL_LZMA is not set
+# CONFIG_KERNEL_GZIP is not set
+CONFIG_KERNEL_LZMA=y
 # CONFIG_KERNEL_LZO is not set
-# CONFIG_SWAP is not set
+CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_POSIX_MQUEUE is not set
@@ -2397,7 +2397,7 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
-# CONFIG_ZRAM is not set
+CONFIG_ZRAM=y
 # CONFIG_FB_SM7XX is not set
 
 #
