--- a/arch/arm/configs/hw_msm7x27a_defconfig
+++ b/arch/arm/configs/hw_msm7x27a_defconfig
@@ -2397,6 +2397,7 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
+CONFIG_XVMALLOC=y
 CONFIG_ZRAM=y
 # CONFIG_FB_SM7XX is not set
 
